# NovelTea

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  codecov.yml
.github/: build_android.sh
.github/workflows/: ci.yml
android/: .gitignore
android/app/: build.gradle
cmake/: Findhunspell.cmake
doc/: CMakeLists.txt  doxyfile.in  footer.htm  header.htm  mainpage.hpp
doc/css/: custom.css
doc/pages/: example.md  main.md
include/NovelTea/: Action.hpp  ActiveText.hpp  ActiveTextSegment.hpp  AssetLoader.hpp  AssetManager.hpp  BBCodeParser.hpp  Context.hpp  ContextObject.hpp  Cutscene.hpp  CutscenePageBreakSegment.hpp  CutscenePageSegment.hpp  CutscenePlayer.hpp  CutsceneRenderer.hpp  CutsceneScriptSegment.hpp  CutsceneSegment.hpp  CutsceneTextSegment.hpp  Dialogue.hpp  DialoguePlayer.hpp  DialogueRenderer.hpp  DialogueSegment.hpp  Diff.hpp  Engine.hpp  Entity.hpp  Err.hpp  Event.hpp  FileUtils.hpp  Game.hpp  JsonSerializable.hpp  Map.hpp  MapRenderer.hpp  MapRoom.hpp  Notification.hpp  Object.hpp  ObjectList.hpp  Player.hpp  Profile.hpp  ProjectData.hpp  ProjectDataIdentifiers.hpp  PropertyList.hpp  RegexUtils.hpp  (+20 more)
include/NovelTea/GUI/: ActionBuilder.hpp  Button.hpp  Hideable.hpp  Inventory.hpp  Navigation.hpp  NinePatch.hpp  Notification.hpp  ScrollBar.hpp  Scrollable.hpp  TextOverlay.hpp  VerbList.hpp
include/NovelTea/SFML/: AssetLoaderSFML.hpp  EngineSFML.hpp  NotificationSFML.hpp  Utils.hpp
include/NovelTea/States/: State.hpp  StateEditor.hpp  StateIdentifiers.hpp  (+8 more)
res/: NovelTeaEditor.qrc
res/assets/: core.js  intro.txt
res/forms/: ActionBuildWidget.ui  ActionSelectWidget.ui  ActionWidget.ui  CutsceneWidget.ui  DialogueWidget.ui  MainWindow.ui  MapWidget.ui  ObjectWidget.ui  ProjectSettingsWidget.ui  PropertyEditor.ui  RichTextEditor.ui  RoomWidget.ui  ScriptWidget.ui  SearchWidget.ui  ShaderWidget.ui  SpellCheckWidget.ui  TestsWidget.ui  VerbWidget.ui  WizardPageAction.ui  WizardPageActionSelect.ui  WizardPageCutscene.ui  WizardPageDialogue.ui  WizardPageMap.ui  WizardPageObject.ui  WizardPageProject.ui  WizardPageRoom.ui  WizardPageScript.ui  WizardPageStart.ui  WizardPageVerb.ui
src/: Android.mk  CMakeLists.txt
src/core/: Action.cpp  ActiveText.cpp  ActiveTextSegment.cpp  AssetLoader.cpp  AssetManager.cpp  BBCodeParser.cpp  CMakeLists.txt  Context.cpp  ContextObject.cpp  Cutscene.cpp  CutscenePageBreakSegment.cpp  CutscenePageSegment.cpp  CutscenePlayer.cpp  CutsceneRenderer.cpp  CutsceneScriptSegment.cpp  CutsceneSegment.cpp  CutsceneTextSegment.cpp  Dialogue.cpp  DialoguePlayer.cpp  DialogueRenderer.cpp  DialogueSegment.cpp  Diff.cpp  Engine.cpp  Entity.cpp  Err.cpp  Event.cpp  FileUtils.cpp  Game.cpp  JsonSerializable.cpp  Map.cpp  MapRenderer.cpp  MapRoom.cpp  Notification.cpp  Object.cpp  ObjectList.cpp  Player.cpp  Profile.cpp  ProjectData.cpp  PropertyList.cpp  RegexUtils.cpp  (+19 more)
src/core/GUI/: ActionBuilder.cpp  Button.cpp  Hideable.cpp  Inventory.cpp  Navigation.cpp  NinePatch.cpp  Notification.cpp  ScrollBar.cpp  Scrollable.cpp  TextOverlay.cpp  VerbList.cpp
src/core/GUI/Icon/: IconContinue.cpp  IconGlow.cpp
src/core/GUI/TextLog/: TextLogDialogueOptionItem.cpp  TextLogDialogueTextItem.cpp  TextLogGenericItem.cpp  TextLogItem.cpp  TextLogRenderer.cpp
src/core/States/: State.cpp  StateEditor.cpp  StateIntro.cpp  StateMain.cpp  StateProfileManager.cpp  StateSettings.cpp  StateStack.cpp  StateTextLog.cpp  StateTextSettings.cpp  StateTitleScreen.cpp
src/core/Zip/: Zip.cpp  zip.c
src/editor/: CMakeLists.txt  DialogueTreeItem.cpp  DialogueTreeItem.hpp  DialogueTreeModel.cpp  DialogueTreeModel.hpp  EditorUtils.cpp  EditorUtils.hpp  EntitySortFilterProxyModel.cpp  EntitySortFilterProxyModel.hpp  EntityTreeView.cpp  EntityTreeView.hpp  SpellChecker.cpp  SpellChecker.hpp  SyntaxHighlighter.cpp  SyntaxHighlighter.hpp  TreeItem.cpp  TreeItem.hpp  TreeModel.cpp  TreeModel.hpp  Utils.cpp  Utils.hpp  main.cpp
src/editor/Widgets/: ActionBuildWidget.cpp  ActionBuildWidget.hpp  ActionSelectWidget.cpp  ActionSelectWidget.hpp  ActionWidget.cpp  ActionWidget.hpp  CutsceneWidget.cpp  CutsceneWidget.hpp  DialogueWidget.cpp  DialogueWidget.hpp  EditorTabWidget.cpp  EditorTabWidget.hpp  MainWindow.cpp  MainWindow.hpp  MapWidget.cpp  MapWidget.hpp  NovelTeaWidget.cpp  NovelTeaWidget.hpp  ObjectWidget.cpp  ObjectWidget.hpp  ProjectSettingsWidget.cpp  ProjectSettingsWidget.hpp  PropertyEditor.cpp  PropertyEditor.hpp  RichTextEditor.cpp  RichTextEditor.hpp  RoomWidget.cpp  RoomWidget.hpp  SFMLWidget.cpp  SFMLWidget.h  ScriptEdit.cpp  ScriptEdit.hpp  ScriptWidget.cpp  ScriptWidget.hpp  SearchTreeWidget.cpp  SearchTreeWidget.hpp  SearchWidget.cpp  SearchWidget.hpp  ShaderWidget.cpp  ShaderWidget.hpp  (+6 more)
src/editor/Widgets/Map/: Connection.cpp  Connection.hpp  ConnectionGraphicsObject.cpp  ConnectionGraphicsObject.hpp  ConnectionPainter.cpp  ConnectionPainter.hpp  FlowScene.cpp  FlowScene.hpp  FlowView.cpp  FlowView.hpp  MapStyle.cpp  MapStyle.hpp  MapView.cpp  MapView.hpp  Node.cpp  Node.hpp  NodeConnectionInteraction.cpp  NodeConnectionInteraction.hpp  NodeGraphicsObject.cpp  NodeGraphicsObject.hpp  NodePainter.cpp  NodePainter.hpp
src/editor/Widgets/QtPropertyBrowser/: qteditorfactory.cpp  qteditorfactory.h  qtpropertymanager.cpp  qtpropertymanager.h  qttreepropertybrowser.cpp  qtvariantproperty.cpp  qtvariantproperty.h
src/editor/Wizard/: Wizard.cpp  Wizard.hpp  WizardPageAction.cpp  WizardPageAction.hpp  WizardPageActionSelect.cpp  WizardPageActionSelect.hpp  WizardPageCutscene.cpp  WizardPageCutscene.hpp  WizardPageDialogue.cpp  WizardPageDialogue.hpp  WizardPageMap.cpp  WizardPageMap.hpp  WizardPageObject.cpp  WizardPageObject.hpp  WizardPageProject.cpp  WizardPageProject.hpp  WizardPageRoom.cpp  WizardPageRoom.hpp  WizardPageScript.cpp  WizardPageScript.hpp  WizardPageStart.cpp  WizardPageStart.hpp  WizardPageVerb.cpp  WizardPageVerb.hpp
src/renderers/SFML/: AssetLoaderSFML.cpp  CMakeLists.txt  EngineSFML.cpp  NotificationSFML.cpp  UtilsSFML.cpp
test/: BBCodeParser.cpp  CMakeLists.txt  Dialogue.cpp  Engine.cpp  Engine.hpp  main.cpp
(+20 files in other folders)
